feat: add DTOs for connection test results, schema info, metadata sync results, and data source management